Fix widths at around 770px so that containers don't overlap

--- a/src/index.css
+++ b/src/index.css
@@ -421,7 +421,9 @@ height: 100%;
   max-height: 95%;
   height: 95%;
 
-  width: 83.3%;
+  width: calc(100vw - 208px);
+max-width: 83.33%;
+ 
   overflow-y: hidden;
   pointer-events: all;
 }
